--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.5.0
 atomicwrites==1.4.0
 attrs==21.4.0
+backports.zoneinfo==0.2.1
 black==22.1.0
 click==8.0.4
 colorama==0.4.4
@@ -11,6 +12,7 @@ iniconfig==1.1.1
 livereload==2.5.2
 mypy-extensions==0.4.3
 packaging==21.3
+parameterized==0.8.1
 pathspec==0.9.0
 Pillow==9.0.1
 platformdirs==2.5.1
@@ -24,4 +26,5 @@ six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 tornado==6.1
+typing_extensions==4.1.1
 tzdata==2021.5
