--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,12 @@
 [pytest]
 DJANGO_SETTINGS_MODULE = core.settings
 python_files = test_*.py tests.py
+addopts = 
+    --doctest-modules
+    --strict-markers
+    # -rP
+
+markers = 
+    slow: Run slow tests
+    fast: Run fast tests
+    functional_test: Run functional tests
