--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,26 @@
 asgiref==3.5.0
+async-generator==1.10
 atomicwrites==1.4.0
 attrs==21.4.0
 backports.zoneinfo==0.2.1
 black==22.1.0
+certifi==2022.5.18.1
+cffi==1.15.0
 click==8.0.4
 colorama==0.4.4
 coverage==6.3.2
+cryptography==37.0.2
 Django==4.0.4
 django-autoslug==1.9.8
 factory-boy==3.2.1
 Faker==13.2.0
+h11==0.13.0
+idna==3.3
 iniconfig==1.1.1
 livereload==2.5.2
 mypy-extensions==0.4.3
 mysqlclient==2.1.0
+outcome==1.1.0
 packaging==21.3
 parameterized==0.8.1
 pathspec==0.9.0
@@ -21,14 +28,24 @@ Pillow==9.0.1
 platformdirs==2.5.1
 pluggy==1.0.0
 py==1.11.0
+pycparser==2.21
+pyOpenSSL==22.0.0
 pyparsing==3.0.7
+PySocks==1.7.1
 pytest==7.0.1
 pytest-django==4.5.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+selenium==4.2.0
 six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
 sqlparse==0.4.2
 tomli==2.0.1
 tornado==6.1
+trio==0.20.0
+trio-websocket==0.9.2
 typing_extensions==4.1.1
 tzdata==2021.5
+urllib3==1.26.9
+wsproto==1.1.0
