--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,28 @@
 asgiref==3.5.2
 attrs==21.4.0
-Django==4.0.6
+black==22.6.0
+click==8.1.3
+Django==4.0.2
+django-cors-headers==3.13.0
 django-debug-toolbar==3.5.0
+djangorestframework==3.13.1
 factory-boy==3.2.1
 Faker==13.13.0
 iniconfig==1.1.1
 livereload==2.6.3
+mypy-extensions==0.4.3
 packaging==21.3
+pathspec==0.9.0
 Pillow==9.1.1
+platformdirs==2.5.2
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.9
 pytest==7.1.2
+pytest-dotenv==0.5.2
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
